--- a/public/cat/index.html
+++ b/public/cat/index.html
@@ -6,9 +6,31 @@
       href="https://fonts.googleapis.com/css?family=Poppins"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../css/cat-page.css">
     <title>Cat Chat (Exercise 1)</title>
   </head>
   <body>
     <!-- add content here -->
+    <div class="chat-app">
+      <div class="chat-app__header">
+        <h2>Cat Chat</h2>
+      </div>
+      <div class="chat-app__content">
+        <form class="user-form" onsubmit="sendMessage(event)">
+          <label for="user-input" class="user-form--label"> Message the cat </label>
+          <input
+            name="user-input"
+            id="user-input"
+            class="user-form--input"
+            placeholder="Type your message"
+          />
+          <button class="user-form--button">Send</button>
+        </form>
+        <div class="conversation">
+          <div id="conversation-container" class="conversation-container"></div>
+        </div>
+      </div>
+    </div>
+    <script src="scripts.js"></script>
   </body>
 </html>
